# minebridge

./: .gitignore  Makefile  Makefile.am  README  common.h  configure.ac  environ.c  environ.h  main.c
mcin/: mc_regex.h  mcin.c  mcin.h
net/: curlutils.c  curlutils.h  net.c  net.h
rcon/: rcon.c  rcon.h
tg/: tg.c  tg.h
